## Process this file with automake to produce Makefile.in
#######################################################################
# gaul/Makefile.am
#######################################################################
#
# GAUL - Genetic Algorithm Utility Library
# Copyright ©2000-2001, Stewart Adcock <stewart@bellatrix.pcl.ox.ac.uk>
#
# The latest version of this program should be available at:
# http://www.stewart-adcock.co.uk/
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.  Alternatively, if your project
# is incompatiable with the GPL, I will probably agree to requests
# for permission to use the terms of any other license.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY WHATSOEVER.
#
# A full copy of the GNU General Public License should be in the file
# "COPYING" provided with this distribution; if not, see:
# http://www.gnu.org/
#
#######################################################################
#
# Last Updated:	17/05/01 SAA	Modifications for the new GAUL CVS archive on sourceforge.
#		02/02/01 SAA	Moved ga_util and ga_intrinsics from src directory to ga directory.  renamed src directory to helga.
#

# require automake 1.4
AUTOMAKE_OPTIONS = 1.4

SUBDIRS = util src tests docs .

#EXTRA_DIST = gaul.spec.in

#m4datadir = $(datadir)/aclocal
#m4data_DATA = gaul.m4

#dist-hook: gaul.spec
#	if test -e $(srcdir)/INSTALL.in && test -e $(srcdir)/README.in ; then \
#	     CONFIG_FILES="INSTALL:$(srcdir)/INSTALL.in README:$(srcdir)/README.in" \
#	     CONFIG_HEADERS= \
#	     $(SHELL) config.status \
#	     && cp INSTALL README $(distdir) ; \
#	fi \
#	&& cp gaul.spec $(distdir)

